@@ -59,6 +59,7 @@
 <a href="CoreTasks/java.html">Java</a><br>
 <a href="CoreTasks/javac.html">Javac</a><br>
 <a href="CoreTasks/javadoc.html">Javadoc/<i>Javadoc2</i></a><br>
+<a href="CoreTasks/length.html">Length</a><br>
 <a href="CoreTasks/loadfile.html">LoadFile</a><br>
 <a href="CoreTasks/loadproperties.html">LoadProperties</a><br>
 <a href="CoreTasks/mail.html">Mail</a><br>
