@@ -1,0 +1,103 @@
+<project name="length">
+  <property name="dir" location="lengthtestdir" />
+  <property name="dir.a" location="${dir}/a" />
+  <property name="dir.b" location="${dir}/b" />
+
+  <target name="init">
+    <mkdir dir="${dir.a}" />
+    <mkdir dir="${dir.b}" />
+    <concat destfile="${dir.a}/foo">foo</concat>
+    <concat destfile="${dir.b}/bar">bar</concat>
+  </target>
+
+  <target name="testEach" depends="init">
+    <length mode="each" property="length.each">
+      <fileset id="fs" dir="${dir}" />
+    </length>
+    <pathconvert property="expected" refid="fs" pathsep="${line.separator}">
+      <globmapper from="*" to="* : 3" />
+    </pathconvert>
+    <fail>
+      <condition>
+        <not>
+          <equals arg1="${expected}" arg2="${length.each}" />
+        </not>
+      </condition>
+    </fail>
+  </target>
+
+  <target name="testAll" depends="init">
+    <length property="length.all">
+      <fileset id="foo" file="${dir.a}/foo" />
+      <fileset id="bar" file="${dir.b}/bar" />
+    </length>
+    <fail>
+      <condition>
+        <not>
+          <equals arg1="6" arg2="${length.all}" />
+        </not>
+      </condition>
+    </fail>
+  </target>
+
+  <target name="testFile" depends="init">
+    <length property="length.foo" file="${dir.a}/foo" />
+    <fail>
+      <condition>
+        <not>
+          <equals arg1="3" arg2="${length.foo}" />
+        </not>
+      </condition>
+    </fail>
+  </target>
+
+  <target name="testBoth" depends="init">
+    <length property="length.foo" file="${dir.a}/foo">
+      <fileset file="${dir.b}/bar" />
+    </length>
+    <fail>
+      <condition>
+        <not>
+          <equals arg1="6" arg2="${length.foo}" />
+        </not>
+      </condition>
+    </fail>
+  </target>
+
+  <target name="testDupes" depends="init">
+    <length property="length.foo" file="${dir.a}/foo">
+      <fileset dir="${dir}" />
+    </length>
+    <fail>
+      <condition>
+        <not>
+          <equals arg1="6" arg2="${length.foo}" />
+        </not>
+      </condition>
+    </fail>
+  </target>
+
+  <target name="testString">
+    <length string="foo" property="length.string" />
+    <fail>
+      <condition>
+        <not>
+          <equals arg1="3" arg2="${length.string}" />
+        </not>
+      </condition>
+    </fail>
+  </target>
+
+  <target name="testTrimFile" description="should fail">
+    <length file="${ant.file}" trim="false" />
+  </target>
+
+  <target name="testStringFile" description="should fail">
+    <length string="foo" file="${ant.file}" />
+  </target>
+
+  <target name="cleanup">
+    <delete dir="${dir}" />
+  </target>
+
+</project>
