@@ -81,6 +81,7 @@ presetdef=org.apache.tools.ant.taskdefs.PreSetDef
 macrodef=org.apache.tools.ant.taskdefs.MacroDef
 nice=org.apache.tools.ant.taskdefs.Nice
 libraries=org.apache.tools.ant.taskdefs.repository.Libraries
+length=org.apache.tools.ant.taskdefs.Length
 
 # optional tasks
 image=org.apache.tools.ant.taskdefs.optional.image.Image
